--- a/Frontend2/index.html
+++ b/Frontend2/index.html
@@ -46,9 +46,8 @@
   <p>Interactive Designer with strong Research, problem-solving and public speaking skills. this builds on 7+ years in the luxury automotive field with an expansive background in sales, product knowledge, training, brand representation, and graphic design. </p>
 	
 	<br>
-	<p>Born and raised in Atlanta, GA, I studied Interactive Design at Kennesaw State University. I grew up with a love of cars and have spent the last 6 years in the automotive industry while earning my Bachelors Degree. This has led to me having and extensive background in Sales, Adult Learning, and Training to pair well with my Graphic and Interactive Design skills.</p>
-	
-	
+	<h4>Going Forward</h4>
+	<p>Looking Forward I would like to see my self continue in the UI/UX field and eventrually head in a direction of project or product manager.</p>
 	<br>
 	<section>
 
@@ -150,6 +149,9 @@
 					<li>Illustrator</li>
 						<li>AutoCad</li>
 					<li>Axure RP</li>
+						<li>Sketch</li>
+						<li>Figma</li>
+						<li>Invision</li>
 					</ul>
 			
 		
@@ -164,9 +166,9 @@
 	
 			<h4> Languages</h4>
 			<ul>
-					<li>C#</li>
-					<li>HTML and CSS</li>
-					<li>Java</li>
+					<li>C# (Moderate)</li>
+					<li>HTML and CSS (Strong)</li>
+					<li>Java(Moderate)</li>
 					</ul>
 	</div>
 	</div>
