--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 
 <title>Parker Bomar</title>
-<link href="stylesheets/index_style.css" rel="stylesheet" type="text/css">
+<link href="../frontend22/stylesheets/index_style.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -15,7 +15,7 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><a class="image" href="https://www.pbomar.com"><img src="assets/PBlogo1.png" width="40" height="" alt=""/></a></li> 
+<li><a class="image" href="https://www.pbomar.com"><img src="../frontend22/assets/PBlogo1.png" width="40" height="" alt=""/></a></li> 
   <li><a href="https://www.pbomar.com/Portfolio.html">Portfolio</a></li>
   <li><a href="https://www.linkedin.com/in/pbomar">Linked in</a></li>
   <li><a href="https://www.dribbble.com/parkerbomar">Dribbble</a></li>
@@ -27,7 +27,7 @@
 	<div class="bellownav"></div>
 	<!-- Video-->
 <div class="video-container">
-	  <video autoplay loop muted poster="assets/arches.jpg">
+	  <video autoplay loop muted poster="../frontend22/assets/arches.jpg">
 
 
   </video>
@@ -47,7 +47,7 @@
 	
 	<br>
 	<h4>Going Forward</h4>
-	<p>Looking Forward I would like to see my self continue in the UI/UX field and eventrually head in a direction of project or product manager.</p>
+	<p>Looking Forward I would like to see my self continue in the UI/UX field and eventrually head in a direction of project or product manager. </p>
 	<br>
 	<section>
 
