--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 	<!-- all page nav-->
 	
 	<ul>	
-<li><a class="image" href="https://www.pbomar.com"><img src="../frontend22/assets/PBlogo1.png" width="40" height="" alt=""/></a></li> 
+<li><a class="image" href="https://www.pbomar.com"><img src="../frontend/assets/PBlogo1.png" width="40" height="" alt=""/></a></li> 
   <li><a href="https://www.pbomar.com/Portfolio.html">Portfolio</a></li>
   <li><a href="https://www.linkedin.com/in/pbomar">Linked in</a></li>
   <li><a href="https://www.dribbble.com/parkerbomar">Dribbble</a></li>
@@ -27,7 +27,7 @@
 	<div class="bellownav"></div>
 	<!-- Video-->
 <div class="video-container">
-	  <video autoplay loop muted poster="../frontend22/assets/arches.jpg">
+	  <video autoplay loop muted poster="../frontend/assets/arches.jpg">
 
 
   </video>
