--- a/frontend/404.html
+++ b/frontend/404.html
@@ -12,7 +12,7 @@
 	<!-- Please ignore quality of code.  Site was made in  less than 24hrs for an intro class challenge. -->
 <title>Parker Bomar - 404</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
-<link href="Stylesheets/404.css" rel="stylesheet" type="text/css">
+<link href="/frontend/stylesheets/404.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
