--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,7 +132,7 @@
 			<div class="clear"></div>
 
 		</section>
-	
+	<div id="stats">
 	<br><br><br>
 	<h2>Key Skills</h2>
 	<div id="columnbio1">
@@ -173,7 +173,7 @@
 	</div>
 	</div>
 
-	
+</div>
 </main>
 
 
