--- a/404.html
+++ b/404.html
@@ -13,6 +13,7 @@
 <title>Parker Bomar - 404</title>
 	<link rel="shortcut icon" href="favicon.ico"  />
 <link href="Stylesheets/404.css" rel="stylesheet" type="text/css">
+	<link href="/frontend/stylesheets/404.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
