--- a/frontend/404.html
+++ b/frontend/404.html
@@ -22,8 +22,8 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 		<h1><img src="assets/PBlogo.png" width="100" style="text-align: center; display: block; margin: auto; "alt=""/></h1>
 <a href="index.html">ABOUT</a>
-	 <a href="Portfolio.html">PORTFOLIO</a>
-	 <a href="RESUME.pdf"  target="_blank">RESUME</a>
+	 <a href="https://www.pbomar.com/Portfolio.html">PORTFOLIO</a>
+	 <a href="https://www.pbomar.com/RESUME.pdf"  target="_blank">RESUME</a>
 			<br>
 		<a href="https://www.linkedin.com/in/pbomar"  target="_blank">LINKEDIN</a>
 		<a href="https://www.instagram.com/parkerbomar" target="_blank">INSTAGRAM</a>
@@ -64,9 +64,9 @@ function closeNav() {
 	
 <nav>
   <ul>
-	  <li><a href="index.html">ABOUT</a></li>  
-	<li> <a href="Portfolio.html">PORTFOLIO</a></li> 
-	<li> <a href="RESUME.pdf"  target="_blank">RESUME</a></li>
+	  <li><a href="https://www.pbomar.com/index.html">ABOUT</a></li>  
+	<li> <a href="https://www.pbomar.com/Portfolio.html">PORTFOLIO</a></li> 
+	<li> <a href="https://www.pbomar.com/RESUME.pdf"  target="_blank">RESUME</a></li>
 	<li> <a  class="current">404</a></li>
   </ul>
 	  <br>
