Phase 1 in site rollout
Ethnogrphy page

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -109,7 +109,7 @@ function closeNav() {
 				</div> </div> </div> </a>
 				
 				<div id="hoverimg6">
-		<a href="ethno.html">
+		<a href="ethnography.html">
 			<div class="hero6-image">
   			<div class="hero6-text">
 	 
