--- a/ethnography.html
+++ b/ethnography.html
@@ -767,7 +767,7 @@
 			</div>
 			<div class="col-md-3 col-sm-6 offset-lg-6 col-lg-3">
 				<h4 class="mg-md text-sm-left text-center tc-white-2 text-lg-left">
-					Connect
+					Connect With Parker
 				</h4>
 				<div class="row">
 					<div class="col-6 col-sm-2 col offset-sm-0">
