Behance profle change

--- a/ethnography.html
+++ b/ethnography.html
@@ -777,7 +777,7 @@
 					</div>
 					<div class="col-6 col-sm-2">
 						<div class="text-center">
-							<a href="https://www.behance.net/Parkerboma7017" target="_blank"><span class="fa fa-behance-square icon-md"></span></a>
+							<a href="https://www.behance.net/Parkerbomar" target="_blank"><span class="fa fa-behance-square icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-6 col-sm-2">
