--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function closeNav() {
 	<div id="social">
 		
 		<a href="https://www.instagram.com/parkerbomar" target="_blank"><img src="assets/insta.png" width="44" height="44" alt="@parkerbomar - Instagram" align = "center"/></a>
-		<a href="https://www.behance.net/Parkerboma7017" target="_blank" ><img src="assets/Behance.png" width="42" height="42" alt="Dribble" align = "center"/></a>
+		<a href="https://www.behance.net/Parkerbomar" target="_blank" ><img src="assets/Behance.png" width="42" height="42" alt="Dribble" align = "center"/></a>
 		<a href="https://dribbble.com/parkerbomar" target="_blank"><img src="assets/dribble.png" width="42" height="42" alt="behance" align = "center"/></a>
 		<a href="https://www.linkedin.com/in/pbomar" target="_blank"><img src="assets/linkedin.png" width="42" height="42" alt="Linked-in" align = "center"/></a>
 	</div>
