--- a/frontend/final.html
+++ b/frontend/final.html
@@ -119,8 +119,8 @@
     
 <section>
   <div class="parallax-four">
-     <h3>Bear the </h3>
-    <h2>four</h2>
+     <h3>WHITE the</h3>
+    <h2>Samoyed</h2>
   </div>
 </section>
 
@@ -151,8 +151,8 @@
 </section>
     <section>
   <div class="parallax-five">
-     <h3>Bear the </h3>
-    <h2>Five</h2>
+     <h3>Gator the </h3>
+    <h2>Mighty tiger</h2>
   </div>
 </section>
 
@@ -183,8 +183,8 @@
 </section>
     <section>
   <div class="parallax-six">
-     <h3>Bear the </h3>
-    <h2>six</h2>
+     <h3>BOB </h3>
+    <h2>he is a bit weird</h2>
   </div>
 </section>
 
