--- a/frontend/final.html
+++ b/frontend/final.html
@@ -16,7 +16,7 @@
   
 <section>
   <div class="title">
-    <h3>Dedicated to the love of </h3>
+    <h3>For the Love of </h3>
     <h1>OUR PETS</h1>
   </div>
     
@@ -43,29 +43,9 @@
 
 <section>
   <div class="block">
-      <p><span class="first-character a1">I</span>Quid voluptate o arbitror non ullamco nisi nulla incurreret quid, non te anim 
-          quae dolore ex est anim minim veniam ingeniis. De arbitror adipisicing ea 
-          excepteur fugiat multos ut minim qui hic ex quorum quorum noster an an dolore 
-          amet aliqua litteris. Amet quibusdam quibusdam ea esse aliquip adipisicing, id 
-          fugiat quae quid admodum non nam nisi arbitror fabulas. Enim ut fabulas eu 
-          varias, irure et laborum ad esse, eram est in quae voluptate, ingeniis minim 
-          cupidatat, incurreret si amet nostrud do admodum nulla quorum e quorum, ut nam 
-          multos laborum in incurreret nisi consequat vidisse. Est tamen multos quid 
-          incurreret ut appellat id incididunt. Aut ea fore nulla fugiat.</p>
+      <p><span class="first-character a1">I</span>Piper was rescued when she was about 8 weeks old. She was my first dog as an adult on my own. I’d wanted a little companion for ages, and here she was. She seemed so shy and innocent there at the shelter, but when I brought her home she was full of sass almost immediately. She literally has the most personality out of any dog that I’ve ever known. She’s incredibly smart too. Piper knows all kinds of little tricks like high five, spin, speak, fist bump, play dead, roll over, crawl, and dance. She knows them verbally and also by little hand movements that I made up. She only performs her tricks if she knows she’s getting a treat because her favorite thing to do is eat. Her favorite food is provolone cheese. <br><br>She knows a lot of words, and even how to spell some of her favorite words like W-A-L-K. I thought I was smart by spelling walk so she wouldn’t get too excited when I said it, but she picked up on the spelling in about a week. She’s not a fan of licking, but she “kisses” you by touching her nose to you. She’s also not a fan of barking, but she will talk to you and make little Chewbacca noises when she’s trying to tell you something. She’s a fan of cuddling and night night time, but will only lay curled up next to your feet. She also loves to play outside and chase little critters around the yard. Her favorite place to go is bye-bye to PetSmart where she picks out her own bone on the bone aisle and soaks up the attention when people inevitably want to love on her and pet her.</p>
     <p class="line-break margin-top-10"></p>
-      <p class="margin-top-10">Ingeniis nisi quibusdam cernantur, ad enim ut anim ut excepteur velit sunt o 
-          illum, id legam fidelissimae quo iudicem cillum multos possumus illum o 
-          cernantur philosophari ex quibusdam e illum consequat a relinqueret de veniam in 
-          laborum nam velit. A lorem deserunt. Fugiat et doctrina, quo quem singulis 
-          familiaritatem, quid nam incididunt, mandaremus quid ipsum pariatur quid eu 
-          doctrina nulla irure ne quorum, de multos fabulas id legam ut non nisi mentitum 
-          sed nulla voluptate tractavissent. Minim occaecat e expetendis te et aliquip 
-          sempiternum, offendit multos lorem cupidatat magna si do quae officia commodo. 
-          Esse expetendis et firmissimum, doctrina dolor te proident despicationes, quem 
-          te aliquip e quorum in qui incididunt qui fabulas, nulla aut et culpa appellat, 
-          ita noster et labore, possumus et quae nostrud in minim nescius nam nescius. 
-          Proident eu multos cupidatat, multos quibusdam o domesticarum e id ullamco ne 
-          incurreret, lorem deserunt voluptatibus.</p>
+      <p class="margin-top-10">- Lindsay Blankenbecker</p>
   </div>
 </section>
 
