--- a/frontend/final.html
+++ b/frontend/final.html
@@ -37,7 +37,7 @@
     <div id="piper"></div>
     <div class="parallax-one">
         <h3>Piper the </h3>
-      <h2>Alaskan Husky</h2>
+      <h2>Siberian Husky</h2>
     </div>
 </section>
 
